Breaks more content into partials

--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -2,6 +2,7 @@
   background: $light-color;
   position: relative;
   min-height: 700px;
+  padding-bottom: 200px;
   h3, h4 {
     position: relative;
     z-index: 10;
