--- a/app/views/home/_slide.html.slim
+++ b/app/views/home/_slide.html.slim
@@ -1,30 +1,4 @@
 #serv-slide.serv-slide
-  ul data-listname="Graphics"
-    li
-      .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
-        span Print
-    li
-      .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
-        span Web
-    li
-      .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
-        span Ads
-  ul data-listname="Branding"
-    li
-      .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
-        span Logos
-    li
-      .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
-        span Identity
-    li
-      .slide-item
-        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
-        span Standards
   ul data-listname="Websites"
     li
       .slide-item
@@ -38,6 +12,19 @@
       .slide-item
         =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
         span SEO
+  ul data-listname="Design"
+    li
+      .slide-item
+        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+        span Logos
+    li
+      .slide-item
+        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+        span Identity
+    li
+      .slide-item
+        =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+        span Ads
   ul data-listname="Web Apps"
     li
       .slide-item
@@ -52,9 +39,8 @@
         =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
         span Manageable
   .row
-    .large-12.columns     
+    .large-12.columns
       nav
-        a href="#"  Graphics
-        a href="#"  Branding
         a href="#"  Websites
+        a href="#"  Design
         a href="#"  Web Apps
